# xcm

./: Cargo.toml
.github/workflows/: ci.yml
pallet-xcm/: Cargo.toml
pallet-xcm-benchmarks/: Cargo.toml
procedural/: Cargo.toml
xcm-builder/: Cargo.toml
xcm-executor/: Cargo.toml
xcm-executor/integration-tests/: Cargo.toml
xcm-executor/src/: assets.rs
xcm-simulator/: Cargo.toml
xcm-simulator/example/: Cargo.toml
xcm-simulator/fuzzer/: Cargo.toml
