[package]
name = "staging-xcm"
description = "The basic XCM datastructures."
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
bounded-collections = { version = "0.1.8", default-features = false, features = ["serde"] }
derivative = { version = "2.2.0", default-features = false, features = [ "use_core" ] }
impl-trait-for-tuples = "0.2.2"
log = { version = "0.4.17", default-features = false }
parity-scale-codec = { version = "3.6.5", default-features = false, features = [ "derive", "max-encoded-len" ] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive", "serde"] }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false, features = ["serde"] }
serde = { version = "1.0.188", default-features = false, features = ["alloc", "derive"] }
xcm-procedural = { path = "procedural" }
environmental = { version = "1.1.4", default-features = false }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
hex = "0.4.3"
hex-literal = "0.4.1"

[features]
default = ["std"]
wasm-api = []
std = [
	"bounded-collections/std",
	"environmental/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-weights/std",
]

[workspace]
resolver = "2"

members = [
	"pallet-xcm",
	"pallet-xcm-benchmarks",
	"procedural",
	"xcm-builder",
	"xcm-executor",
	"xcm-executor/integration-tests",
	"xcm-simulator",
	"xcm-simulator/example",
	"xcm-simulator/fuzzer",
]

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
version = "3.0.0"
license = "GPL-3.0-only"
