[package]
name = "staging-xcm-builder"
description = "Tools & types for building with XCM and its executor."
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
impl-trait-for-tuples = "0.2.1"
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
xcm = { package = "staging-xcm", path = "..", default-features = false }
xcm-executor = { package = "staging-xcm-executor", path = "../xcm-executor", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-weights = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
log = { version = "0.4.17", default-features = false }

# Polkadot dependencies
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }

[dev-dependencies]
assert_matches = "1.5.0"
primitive-types = "0.12.1"
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
pallet-xcm = { path = "../pallet-xcm" }
pallet-salary = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
primitives = { package = "polkadot-primitives", git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
polkadot-test-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-salary/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-runtime-parachains/runtime-benchmarks",
	"polkadot-test-runtime/runtime-benchmarks",
	"primitives/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]
std = [
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-transaction-payment/std",
	"parity-scale-codec/std",
	"polkadot-parachain-primitives/std",
	"scale-info/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-weights/std",
	"xcm-executor/std",
	"xcm/std",
]
