[package]
name = "xcm-simulator"
description = "Test kit to simulate cross-chain message passing and XCM execution"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1" }
paste = "1.0.7"

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

xcm = { path = "../" }
xcm-executor = { path = "../xcm-executor" }
xcm-builder = { path = "../xcm-builder" }
