[package]
name = "xcm-simulator"
description = "Test kit to simulate cross-chain message passing and XCM execution"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1" }
paste = "1.0.14"

frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
polkadot-parachain-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }

xcm = { package = "staging-xcm", path = "../" }
xcm-executor = { package = "staging-xcm-executor", path = "../xcm-executor" }
xcm-builder = { package = "staging-xcm-builder", path = "../xcm-builder" }
