[package]
name = "xcm-executor-integration-tests"
description = "Integration tests for the XCM Executor"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
futures = "0.3.21"
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
pallet-xcm = { path = "../../pallet-xcm" }
polkadot-test-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
polkadot-test-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master", default-features = false }
sp-state-machine = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "master" }
xcm = { package = "staging-xcm", path = "../..", default-features = false }
xcm-executor = { package = "staging-xcm-executor", path = ".." }

[features]
default = ["std"]
std = ["frame-support/std", "sp-runtime/std", "xcm/std"]
